2004-09-30  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/FileChannel.java (close): Set file
	member to null after closing.
	* src/jacl/tcl/lang/Interp.java (readScriptFromFile,
	readScriptFromURL, readScriptFromInputStream, evalResource):
	Use new Tcl IO layer to filter CRLF to LF when
	sourcing data from a file. Use new ReadInputStreamChannel
	class to read and filter data from an InputStream
	either from a resource or a URL. This removes any
	attempts to use the available method to do any sort
	of non-blocking IO in the Interp class.
	* src/jacl/tcl/lang/ReadInputStreamChannel.java: Add
	new class to read data from an InputStream as a Channel.
	* tests/all.tcl: Fixup tcltest variable setting
	so that it works in Jacl.
	* tests/jacl/Interp.test: Add test cases for CRLF to LF
	conversion when sourcing a file or a URL.
	[Bug 1000176]

2004-09-28  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/TclOutputStream.java (flushChannel):
	Add explicit call to flush() the OutputStream and to
	sync() the FileDescriptor for a FileOutputStream. This
	fixes a number of test regressions under Sun JDK 1.4 (Win32).

2004-09-18  Alexander James Pasadyn  <ajpasadyn@users.sourceforge.net>

	* src/jacl/tcl/lang/InfoCmd.java (InfoHostnameCmd): Implement
	info hostname command for Jacl.
	[Patch 1017119]

2004-09-18  Alexander James Pasadyn  <ajpasadyn@users.sourceforge.net>

	* src/jacl/tcl/lang/Shell.java (main): If the main eval()
	returns TCL.ERROR or some unknown error code, exit with
	a non-zero status.
	[Patch 1021427]

2004-09-18  Alexander James Pasadyn  <ajpasadyn@users.sourceforge.net>

	* src/tcljava/tcl/lang/TCL.java: Make the TCL.NO_EVAL,
	TCL.EVAL_GLOBAL, and TCL.EVAL_DIRECT constants public
	so that they can be used outside the tcl.lang package.
	[bug 1000263]

2004-09-18  Alf Watt  <alfwatt@users.sourceforge.net>

	* configure: Regen.
	* tcljava.m4 (AC_JAVA_CLASSPATH): Add support
	for building Jacl under Darwin.
	[Bug 1004860]
